Fix alignment of top elements

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,11 @@ html {
     max-width: 375px;
     width: 100%;
     height: 100%;
+    @media (min-width: 993px) {
+        max-width: 1440px;
+        width: 80%;
+        height: 1000vh; //CHANGE THIS AFTER FIGURING SOMETHING OUT :')
+    }
   }
   
     .navbar {
@@ -205,11 +210,6 @@ html {
         line-height: 120%;
       }
   
-      p {
-        line-height: normal;
-        font-size: 16px;
-      }
-  
       .emphasize {
         font-size: 2.5rem;
         font-weight: 700;
@@ -222,101 +222,52 @@ html {
   
         p {
           margin-bottom: 15px;
+          line-height: normal;
+          font-size: 16px;
+        }
+    
+        @media (min-width: 993px){
+          p {
+            font-size: 1.6rem;
+          } 
         }
       }
-  
-      #text-container {
-        h2 {
-          font-weight: 300;
-          color: currentColor;
-          font-size: 1.45rem;
+      #top{
+        #text-container {
+          h2 {
+            font-weight: 300;
+            color: currentColor;
+            font-size: 1.45rem;
+          } 
         }
-      }
-  
-      #languages-container {
-        padding-bottom: 5vh;
-        border-top: solid;
-        border-bottom: solid;
-  
-        .card {
-          margin-bottom: 5px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          text-align: center;
-  
-          .card-title {
-            color: $emphasis-color;
-            font-size: 0.95rem;
-            font-weight: 700;
-            white-space: nowrap;
-          }
-  
-          i {
-            font-size: 3rem;
-          }
-        }
-      }
-  
-      #projects-container {
-        padding-top: 5vh;
-        // margin-bottom: 5vh;
-  
-        p {
-          margin-bottom: 15px;
-        }
-  
-        .card {
-          object-fit: contain;
-          margin: 20px 0;
-          align-items: center;
-          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.27);
-          -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.27);
-          -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.27);
-          overflow: hidden;
-          border: 0.1px solid rgb(221, 221, 221);
-  
-          .card-text {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding-top: 10px;
-  
-            .card-title {
-              font-family: monospace;
-              padding: 0px 20px;
-              font-size: 1.4rem;
-              font-weight: 500;
-              flex-basis: 45%;
-              text-align: center;
-              color: $btn-background-color;
-            }
-  
-            .card-description {
-              font-size: 0.9rem;
-              font-weight: 300;
-              flex-basis: 55%;
-              padding: 10px;
-            }
-          }
-  
-          .card-img {
-            margin-top: 0;
-            border-radius: 0;
-          }
-        }
-  
+
         @media (min-width: 993px) {
-          .card:hover {
-            cursor: pointer;
-            transform: scale(1.05);
-            margin: 10px auto;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+          display: flex;
+          flex-direction: row;
+          justify-content: space-around;
+          #text-container{
+            flex-basis: 50%;
+
+            h1{
+              font-size: 6rem;
+              line-height: 90%;
+              padding-bottom: 2vh;
+            }
+            h2{
+              font-size: 1.8rem;
+            }
+            p{
+              font-weight: 300;
+            }
+          }
+  
+          img{
+            display: inline-block;
+            padding-bottom: 2vh;
           }
         }
       }
-  
+
       #btn-container {
         padding-top: 30px;
         padding-bottom: 30px;
@@ -384,6 +335,92 @@ html {
         }
       }
   
+      #languages-container {
+        padding-bottom: 5vh;
+        border-top: solid;
+        border-bottom: solid;
+  
+        .card {
+          margin-bottom: 5px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+  
+          .card-title {
+            color: $emphasis-color;
+            font-size: 0.95rem;
+            font-weight: 700;
+            white-space: nowrap;
+          }
+  
+          i {
+            font-size: 3rem;
+          }
+        }
+      }
+  
+      #projects-container {
+        padding-top: 5vh;
+  
+        p {
+          margin-bottom: 15px;
+        }
+  
+        .card {
+          object-fit: contain;
+          margin: 20px 0;
+          align-items: center;
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.27);
+          -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.27);
+          -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.27);
+          overflow: hidden;
+          border: 0.1px solid rgb(221, 221, 221);
+  
+          .card-text {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-top: 10px;
+  
+            .card-title {
+              font-family: monospace;
+              padding: 0px 20px;
+              font-size: 1.4rem;
+              font-weight: 500;
+              flex-basis: 45%;
+              text-align: center;
+              color: $btn-background-color;
+            }
+  
+            .card-description {
+              font-size: 0.9rem;
+              font-weight: 300;
+              flex-basis: 55%;
+              padding: 10px;
+            }
+          }
+  
+          .card-img {
+            margin-top: 0;
+            border-radius: 0;
+          }
+        }
+  
+        @media (min-width: 993px) {
+
+          .card:hover {
+            cursor: pointer;
+            transform: scale(1.05);
+            margin: 10px auto;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+          }
+        }
+      }
+  
+      
+  
       #contact-container {
         bottom: 95px;
         left:auto;
@@ -418,9 +455,6 @@ html {
     }
   
     @media (min-width: 993px) {
-      body{
-        width: auto;
-      }
       .navbar {
         position: fixed;
         width: 100%;
@@ -436,6 +470,7 @@ html {
           display: none;
         }
       }
+    
     }
   
   
